# lib/api-zod/src/generated/types/index.ts
@@ -25,6 +25,8 @@ export * from './adminTable';
 export * from './adminTableCount';
 export * from './errorResponse';
 export * from './getStoreOrderParams';
+export * from './getStoreSeoParams';
+export * from './getStoreSeoType';
 export * from './healthStatus';
 export * from './listAdminRowsParams';
 export * from './listStoreOrdersParams';
@@ -47,4 +49,8 @@ export * from './storeOrderSummary';
 export * from './storePaymentMethod';
 export * from './storeProduct';
 export * from './storeProductCategory';
+export * from './storeSeoBreadcrumb';
+export * from './storeSeoResponse';
+export * from './storeSeoResponseEntityType';
+export * from './storeSeoResponseJsonLd';
 export * from './storeShippingOption';
