# lib/api-zod/src/generated/types/storeSeoResponse.ts
@@ -1,0 +1,23 @@
+/**
+ * Generated by orval v8.23.0 🍺
+ * Do not edit manually.
+ * Api
+ * API specification
+ * OpenAPI spec version: 0.1.0
+ */
+import type { StoreSeoBreadcrumb } from './storeSeoBreadcrumb';
+import type { StoreSeoResponseEntityType } from './storeSeoResponseEntityType';
+import type { StoreSeoResponseJsonLd } from './storeSeoResponseJsonLd';
+
+export interface StoreSeoResponse {
+  entityType: StoreSeoResponseEntityType;
+  /** @nullable */
+  slug: string | null;
+  title: string;
+  h1: string;
+  description: string;
+  canonicalPath: string;
+  indexable: boolean;
+  breadcrumbs: StoreSeoBreadcrumb[];
+  jsonLd: StoreSeoResponseJsonLd;
+}
